# smooth-drive

./: .gitignore  README.md
.claude/: launch.json
backend/: .env.example  pyproject.toml
backend/src/smoothdrive/: __init__.py  config.py  main.py
backend/src/smoothdrive/api/: routes.py
backend/src/smoothdrive/domain/: models.py  osm.py
backend/src/smoothdrive/services/: advisor.py  analyzer.py  events.py  geometry.py  maxspeed.py  overpass.py  routing.py  smoothness.py
backend/src/smoothdrive/static/: debug.html
backend/tests/fixtures/: sample_drive.gpx
backend/tests/fixtures/mixed_kingston_epsom/: overpass.json  route.json
backend/tests/fixtures/rural_guildford_horsham/: overpass.json  route.json
backend/tests/fixtures/urban_croydon_westminster/: overpass.json  route.json
backend/tests/integration/: test_extraction_fixtures.py  test_fixtures.py  test_live_apis.py
backend/tests/unit/: test_advisor.py  test_api.py  test_events.py  test_geometry.py  test_geometry_projection.py  test_health.py  test_maxspeed.py  test_overpass.py  test_routing.py  test_smoothness.py
docs/: validation.md
docs/adr/: ADR-001-openstreetmap.md  ADR-002-fastapi.md  ADR-003-ors-overpass.md
tools/: capture_fixtures.py  gpx_replay.py
