[project]
name = "smoothdrive"
version = "0.1.0"
description = "SmoothDrive backend — anticipate speed changes, signals and roundabouts ahead"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "gpxpy>=1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smoothdrive"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests that call real external APIs (deselected by default)",
]
addopts = "-m 'not live'"

[tool.coverage.run]
source = ["src/smoothdrive"]
